<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    tools:context=".view.AboutActivity">

    <!-- Guidelines Horizontais (0% , 12%, 30%, 85%, 100%)-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh85"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <!-- Menu Superior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_500"
        android:titleTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/gh10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gh0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeMaxTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/text_title_about"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <!-- Ícone de voltar no canto direito -->
        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="16dp"
            android:backgroundTint="@color/purple_500"
            app:tint="@color/white"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/desc_back"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintBottom_toTopOf="@id/bannerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_about"/>
    </ScrollView>


    <!-- 4) Placeholder para banner -->
    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gh85" />


</androidx.constraintlayout.widget.ConstraintLayout>